Pull request #116: WDZO-1476: Fix disabled button default behavior
Squashed commit of the following:

commit 112b7b2b64846b736a87df3ad4d78c8849156dea
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Thu Jan 28 11:34:15 2021 +0300

    WDZO-1476: Fix disabled button default behavior

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -53,6 +53,7 @@
 
 .button.button_disabled {
     background-color: #c2c2c2;
+    cursor: not-allowed;
 }
 
 .button.smallest {
